<resources>
    <string name="app_name">RegisterApp</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="textview">TextView</string>
    <string name="second_name">Фамилия</string>
    <string name="name">Имя</string>
    <string name="patronymic">Отчество</string>
    <string name="e_mail">E-mail</string>
    <string name="password">Пароль</string>
    <string name="repeat_password">Повторите пароль</string>
    <string name="registration">Регистрация</string>
    <string name="required_field">обязательное поле</string>
    <string name="incorrect_email">некорректный пароль</string>
    <string name="passwords_are_not_the_same">пароли не совпадают</string>
    <string name="auth">Авторизация</string>
</resources>